<resources>
  <string name="app_name">Fresh Weather</string>
  <string name="favourite_content_description_weather_icon">Weather icon</string>
  <string name="title_few_contents_text_favourite">Favourites</string>
  <string name="settings_content_description_text_back_button">Button Back</string>
  <string name="details_content_text_description_weather_condition">Weather condition</string>
  <string name="search_content_message_text_nothing_found_on_your_request">Nothing found on your request</string>
  <string name="search_content_message_text_error_something_gone_wrong">Error! The device may not be connected to the Internet. Please check the Internet connection.</string>
  <string name="favourite_content_error_weather_for_city">Error! Error code - %1$s! The weather in %2$s is not available right now. Please try again later and report the developers error code</string>
  <string name="beaufort_scale_calm">Calm</string>
  <string name="beaufort_scale_light_air">Light air</string>
  <string name="beaufort_scale_light_breeze">Light breeze</string>
  <string name="beaufort_scale_gentle_breeze">Gentle breeze</string>
  <string name="beaufort_scale_moderate_breeze">Moderate breeze</string>
  <string name="beaufort_scale_fresh_breeze">Fresh breeze</string>
  <string name="beaufort_scale_strong_breeze">Strong breeze</string>
  <string name="beaufort_scale_moderate_gale">Moderate gale</string>
  <string name="beaufort_scale_fresh_gale">Fresh gale</string>
  <string name="beaufort_scale_strong_gale">Strong gale</string>
  <string name="beaufort_scale_whole_gale">Whole gale</string>
  <string name="beaufort_scale_storm">Storm</string>
  <string name="beaufort_scale_hurricane">Hurricane</string>
  <string name="favourite_content_initial_picture">A picture of a big house</string>
  <string name="favourite_content_text_favourites_are_empty">Favourites are empty</string>
  <string name="favourite_content_add_cities_here">Add cities here, to keep track of the weather forecast</string>
  <string name="favourite_content_description_menu_icon">Show menu</string>
  <string name="content_description_icon_search">Search icon</string>
  <string name="settings_content_title_settings">Settings</string>
  <string name="many_place_title_button_done">Done</string>
  <string name="settings_content_unit_title_temperature">Temperature</string>
  <string name="settings_content_unit_title_temperature_celsius">Degrees Celsius (°C)</string>
  <string name="settings_content_unit_title_temperature_fahrenheit">Degrees Fahrenheit (°F)</string>
  <string name="dropdown_menu_title_screen_settings">Application settings</string>
  <string name="settings_content_unit_title_precipitation">Precipitation</string>
  <string name="settings_content_unit_title_precipitation_inches">Inches (inch)</string>
  <string name="settings_content_unit_title_precipitation_millimeters">Millimeters (mm)</string>
  <string name="settings_content_unit_title_pressure">Pressure</string>
  <string name="settings_content_unit_title_pressure_mmhg">Millimetres of\nmercury column (mmHg)</string>
  <string name="settings_content_unit_title_pressure_hpa">Hectopascals (hPa)</string>
  <string name="settings_content_unit_evaluate_the_application">Evaluate the application</string>
  <string name="settings_content_unit_write_to_the_developers">Write to the developers</string>
  <string name="favourite_content_description_search_button">Search button</string>
  <string name="search_content_text_into_placeholder">Enter a name</string>
  <string name="settings_store_feedback_for_freshweather_app">Feedback for FreshWeather App</string>
  <string name="settings_store_dear_developers_i_have_the_following_feedback">Dear Developers,\n\nI have the following feedback:\n\n</string>
  <string name="search_content_message_enter_more_than_3_letters_to_start_the_search">There must be more than 3 letters for the search to begin.</string>
  <string name="details_content_description_text_back_button">Back button</string>
  <string name="details_content_conditions_text_humidity">HUMIDITY</string>
  <string name="details_content_description_current_weather_conditions_block_icon">Current Weather conditions block icon</string>
  <string name="details_content_conditions_text_wind">WIND</string>
  <string name="details_content_conditions_text_pressure">PRESSURE</string>
  <string name="details_content_title_now_date">Now</string>
  <string name="details_content_error_date_set_on_phone">You have the wrong date set on your phone.</string>
  <string name="details_content_description_icon_calendar">Calendar icon</string>
  <string name="details_content_title_text_next_days_forecast">%1$d-DAY FORECAST</string>
  <string name="details_content_daily_forecast_text_today">Today</string>
  <string name="details_content_daily_forecast_text_tomorrow">Tomorrow</string>
  <string name="details_content_current_weather_text_feels_like">Feels like: %1$s</string>
  <string name="details_content_description_uv_index_icon">UV index icon</string>
  <string name="details_content_title_block_uv_index">UV-INDEX</string>
  <string name="details_content_title_block_cloudiness">CLOUDINESS</string>
  <string name="details_content_text_designation_of_uv_index_low">Low</string>
  <string name="details_content_text_designation_of_uv_index_moderate">Moderate</string>
  <string name="details_content_text_designation_of_uv_index_high">High</string>
  <string name="details_content_text_designation_of_uv_index_very_high">Very high</string>
  <string name="details_content_text_designation_of_uv_index_extreme">Extreme</string>
  <string name="details_content_description_sun_and_moon_icon">Sun and moon icon</string>
  <string name="details_content_title_card_sun_and_moon">SUN AND MOON</string>
  <string name="details_content_description_rise_icon">Rise icon</string>
  <string name="details_content_tittle_sun_moon_block_today">Today</string>
  <string name="details_content_tittle_sun_moon_block_tomorrow">Tomorrow</string>
  <string name="details_content_string_time_duration_h_min">%1$d h %2$d min</string>
  <string name="details_content_text_phase_of_moon_new_moon">New Moon</string>
  <string name="details_content_text_phase_of_moon_waxing_crescent">Waxing Crescent</string>
  <string name="details_content_text_phase_of_moon_first_quarter">First Quarter</string>
  <string name="details_content_text_phase_of_moon_waxing_gibbous">Waxing Gibbous</string>
  <string name="details_content_text_phase_of_moon_full_moon">Full Moon</string>
  <string name="details_content_text_phase_of_moon_waning_gibbous">Waning Gibbous</string>
  <string name="details_content_text_phase_of_moon_third_quarter">Last Quarter</string>
  <string name="details_content_text_phase_of_moon_waning_crescent">Waning Crescent</string>
  <string name="details_content_text_wind_direction_north">N</string>
  <string name="details_content_text_wind_direction_north_northeast">NNE</string>
  <string name="details_content_text_wind_direction_northeast">NE</string>
  <string name="details_content_text_wind_direction_east_northeast">ENE</string>
  <string name="details_content_text_wind_direction_east">E</string>
  <string name="details_content_text_wind_direction_east_southeast">ESE</string>
  <string name="details_content_text_wind_direction_southeast">SE</string>
  <string name="details_content_text_wind_direction_south_southeast">SSE</string>
  <string name="details_content_text_wind_direction_south">S</string>
  <string name="details_content_text_wind_direction_south_southwest">SSW</string>
  <string name="details_content_text_wind_direction_southwest">SW</string>
  <string name="details_content_text_wind_direction_west_southwest">WSW</string>
  <string name="details_content_text_wind_direction_west">W</string>
  <string name="details_content_text_wind_direction_west_northwest">WNW</string>
  <string name="details_content_text_wind_direction_northwest">NW</string>
  <string name="details_content_text_wind_direction_north_northwest">NNW</string>
  <string name="details_content_description_set_icon">Set icon</string>
  <string name="details_content_description_graph_icon">Graph icon</string>
  <string name="details_content_description_uv_index_button_icon">UV index button icon</string>
  <string name="details_content_carts_title_uv_index_chart_first">UV INDEX</string>
  <string name="details_content_carts_title_humidity_chart_first">HUMIDITY</string>
  <string name="details_content_carts_title_pressure_chart_first">PRESSURE</string>
  <string name="details_content_carts_title_uv_index_chart_second">CHART</string>
  <string name="details_content_carts_title_humidity_chart_second">CHART</string>
  <string name="details_content_carts_title_pressure_chart_second">HART</string>
  <string name="details_content_nothing"> - </string>
  <string name="details_content_rain">rain</string>
  <string name="details_content_snow">snow</string>
  <string name="details_content_freezingrain">freezingrain</string>
  <string name="details_content_ice">ice</string>
  <string name="details_content_title_block_precipitation">PRECIPITATIONS</string>
  <string name="nextdays_title_text_weather_conditions">Weather conditions</string>
  <string name="caption_max">"Max: "</string>
  <string name="caption_min">"Min: "</string>
  <string name="error_loading_favourite_cities_please_inform_the_developers_about_the_problem">Error loading favourite cities, please inform the developers about the problem.</string>
  <string name="error_receiving_weather_forecast_please_try_again_later_if_the_error_occurs_again_please_notify_the_developers">Error receiving weather forecast, please try again later, if the error occurs again, please notify the developers.</string>
  <string name="dropdown_menu_title_screen_editing">Edit favourites</string>
  <string name="settings_content_unit_title_forecast">Weather forecast</string>
  <string name="settings_content_number_of_forecast_days">Number of forecast days</string>
  <string name="details_content_error_loading_cities_text">Error retrieving cities from the database. Please try reloading the application, if the error occurs again, please inform the application developers.</string>
  <string name="details_content_error_loading_forecast_text">Error while retrieving weather for the favourite city. Please try reloading the app, if the error occurs again, please notify the app developers.</string>
  <string name="search_content_initial_text">Enter the name of the locality you are looking for and click on the search icon.</string>
  <string name="search_content_placeholder_text">Search…</string>
</resources>